--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,11 @@
 @use './base/reset';
-@use './base/colors';
+@use './base/colors' as c;
 @use './base/text' as t;
 @use './base/utils' as u;
 
 :root {
     // SETTING COMMON COLOR CUSTOM PROPERTIES
-    @each $color, $value in colors.$base-colors {
+    @each $color, $value in c.$base-colors {
         --c-#{$color}: #{$value};
     }
 }
@@ -17,5 +17,5 @@ body {
 }
 
 h1 {
-    @include u.sr-only;
+    @include u.srOnly;
 }
