--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -27,6 +27,7 @@
 
             padding-left: u.toRem(16);
             border-left: 1px solid var(--c-outline-primary);
+            color: var(--c-on-surface-secondary);
         }
 
         time {
