--- a/src/styles/base/_utils.scss
+++ b/src/styles/base/_utils.scss
@@ -1,5 +1,5 @@
 @function toRem($value) {
-    $remValue: ($value / 16) + rem; 
+    $remValue: calc($value / 16) + rem; 
     @return $remValue;
 }
 
