--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -14,6 +14,7 @@
     align-items: center;
     width: $size + px;
     height: $size + px;
+    aspect-ratio: 1;
     border-radius: $roundCorner + px;
 }
 
