--- a/src/components/ListItem/styles.module.scss
+++ b/src/components/ListItem/styles.module.scss
@@ -3,19 +3,30 @@
 @use '../../styles/base/text' as t;
 
 .outerWrapper {
+    height: auto;
     overflow: hidden;
     border-radius: 8px;
+    margin: 32px 0;
 
-    &.isExpandedClass {
-        margin: 32px 0;
+    &.isCollapsedClass {
+        height: 74px;
+        margin: 0;
     }
 }
 
 .contentContainer {
     background-color: var(--c-surface-secondary);
 
-    &.isPlayingClass {
+    &.isCollapsedClass {
+        background-color: transparent;
+    }
+
+    &.isPlayingClass, &:hover.isPlayingClass {
         background-color: var(--c-amber-accent-container-secondary);
+    }
+
+    &:hover {
+        background-color: var(--c-surface-secondary);
     }
 
     header {
@@ -24,6 +35,10 @@
         align-items: center;
         padding-right: u.toRem(16);
         gap: 16px;
+
+        &.isCollapsedClass {
+            padding-right: u.toRem(12);
+        }
 
         .clickableArea {
             position: relative;
@@ -37,6 +52,10 @@
             align-items: center;
             padding: u.toRem(16) 0 u.toRem(16) u.toRem(16);
             gap: 8px 16px;
+
+            &.isCollapsedClass {
+                padding: u.toRem(12) 0 u.toRem(12) u.toRem(12);
+            }
 
             .expandButton {
                 @include b.btn;
@@ -55,12 +74,12 @@
             }
 
             .cardCover {
-                // aspect-ratio: 1;
+                aspect-ratio: 1;
                 width: 48px;
                 height: 48px;
                 border: 1px solid var(--c-outline-primary);
                 border-radius: 8px;
-                // overflow: hidden;
+                overflow: hidden;
                 grid-area: img;
             }
 
@@ -78,6 +97,12 @@
                 &.isPlayingClass {
                     color: var(--c-amber-accent-secondary);
                 }
+
+				&.isCollapsedClass::after {
+					content: ' ...more';
+					color: var(--c-on-surface-primary);
+					font-weight: 500;
+				}
             }
 
             time {
@@ -96,11 +121,27 @@
 .bodyWrapper {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: u.toRem(24);
     padding: 0 u.toRem(80) u.toRem(20);
 
     p {
-        @include t.base("M","regular");
+        @include t.base("M","regular", 150%);
+    }
+}
+
+.seeLessButton {
+    @include b.btn;
+    @include t.base("S","regular", "one-liner");
+    display: flex;
+    align-items: center;
+    padding: 4px 0;
+    gap: 4px;
+    background-color: transparent;
+    color: var(--c-on-surface-primary);
+
+    &.isPlayingClass {
+        color: var(--c-amber-accent-primary);
     }
 }
 
@@ -110,4 +151,12 @@
 
 .playButtonSecondary {
     @include b.buttonIconOutline(32);
+}
+
+.audioBarsWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
 }
