set up axios to consume mocked data

--- a/src/components/PlayerSidebar/styles.module.scss
+++ b/src/components/PlayerSidebar/styles.module.scss
@@ -2,6 +2,8 @@
 @use '../../styles/base/text' as t;
 
 .sidebarContainer {
+    position: sticky;
+    top: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
