--- a/src/components/CardItem/styles.module.scss
+++ b/src/components/CardItem/styles.module.scss
@@ -1,6 +1,7 @@
 @use '../../styles/base/layout' as l;
 @use '../../styles/base/utils' as u;
 @use '../../styles/base/text' as t;
+@use '../../styles/base/button' as b;
 
 .cardWrapper {
     display: flex;
@@ -17,11 +18,14 @@
     transition-duration: 100ms;
     transition-timing-function: ease-in-out;
 
-    &:hover {
+    &.isPlayingClass {
         background-color: var(--c-amber-accent-container-secondary);
     }
 
     .cardCover {
+        position: relative;
+        width: 96px;
+        height: 96px;
         aspect-ratio: 1;
         border: 1px solid var(--c-outline-primary);
         border-radius: 12px;
@@ -49,26 +53,28 @@
         white-space: normal;
     }
 
-    time {
+    .timeInfoWrapper {
         @include t.base("S", "regular", "one-liner");
         color: var(--c-on-surface-secondary);
         transition: color 100ms ease-in-out;
+
+        &.isPlayingClass {
+            color: var(--c-amber-accent-secondary);
+        }
     }
 
-    &:hover time {
-        color: var(--c-amber-accent-secondary);
+    .playButton {
+        @include b.buttonIconPrimary(40, 10);
+        align-self: flex-end;
     }
 
-    .playIndicator {
+    .audioBarsWrapper {
         display: flex;
         justify-content: center;
         align-items: center;
         align-self: flex-end;
-        flex: 0 0 auto;
-        width: 40px;
-        height: 40px;
-        gap: u.toRem(16);
-        background-color: var(--c-amber-accent-container-primary);
-        border-radius: 10px;
+        width: 32px;
+        height: 32px;
+        aspect-ratio: 1;
     }
 }
