--- a/src/components/PlayerSidebar/styles.module.scss
+++ b/src/components/PlayerSidebar/styles.module.scss
@@ -10,7 +10,7 @@
     align-items: center;
     padding: u.toRem(60);
     gap: u.toRem(80);
-    max-width: u.toRem(460);
+    max-width: u.toRem(410);
     height: 100vh;
     border-left: 1px solid var(--c-outline-primary);
     background-image: var(--c-surface-player-widget);
@@ -24,8 +24,11 @@
 }
 
 .coverWrapper {
+    position: relative;
     aspect-ratio: 1;
     overflow: hidden;
+    width: 300px;
+    height: 300px;
     border: 1px solid var(--c-outline-primary);
     border-radius: 24px;
     box-shadow: 0px 34px 21px -21px rgba(0, 0, 0, 0.32);
