--- a/src/components/PlayerControls/styles.module.scss
+++ b/src/components/PlayerControls/styles.module.scss
@@ -7,10 +7,6 @@
     flex-direction: column;
     width: 80%;
     gap: u.toRem(16);
-
-    &.disabledControls {
-        opacity: 50%;
-    }
 }
 
 .playerProgress {
@@ -18,6 +14,10 @@
     justify-content: space-between;
     align-items: center;
     gap: u.toRem(12);
+
+    .disabledControls & {
+        opacity: 40%;
+    }
 
     span {
         @include t.mini("M", "regular", "one-liner");
@@ -41,4 +41,8 @@
 
 .toggleButton {
     @include b.buttonIconToggle;
+
+    &.selectedButton {
+        background-color: var(--c-amber-accent-container-secondary);
+    }
 }
