feat: added tooltips

--- a/src/components/PlayerControls/styles.module.scss
+++ b/src/components/PlayerControls/styles.module.scss
@@ -45,14 +45,17 @@
 
 .playPauseButton {
     @include b.buttonIconSecondary;
+    // position: relative;
 }
 
 .nextPreviousButton {
     @include b.buttonIconTertiary;
+    // position: relative;
 }
 
 .toggleButton {
     @include b.buttonIconToggle;
+    // position: relative;
 
     &.selectedButton {
         background-color: var(--c-amber-accent-container-secondary);
