feat: scroll to element, fix: autoplay

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -32,7 +32,7 @@ ol[role="list"] {
 }
 
 /* Set core root defaults */
-html:focus-within {
+html, html:focus-within {
   scroll-behavior: smooth;
 }
 
