--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -11,6 +11,10 @@
     justify-content: space-between;
     align-items: flex-start;
     gap: u.toRem(24);
+
+    & > * {
+        flex: 0 1 100%;
+    }
 }
 
 .featuredContentContainer {
