--- a/src/components/PlayerFloating/styles.module.scss
+++ b/src/components/PlayerFloating/styles.module.scss
@@ -42,36 +42,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
-    padding: u.toRem(16) u.toRem(16) u.toRem(20) u.toRem(16);
+    max-width: 100%;
+    padding: u.toRem(16);
     gap: u.toRem(8);
-
-    div {
-        position: relative;
-        z-index: 1;
-
-        // &::before {
-        //     content: '';
-        //     position: absolute;
-        //     left: 0;
-        //     top: 0;
-        //     background-image: linear-gradient(90deg, rgba(40, 32, 26, 1), rgba(40, 32, 26, 0));
-        //     width: 20px;
-        //     height: 100%;
-        //     z-index: 3;
-        // }
-
-        // &::after {
-        //     content: '';
-        //     position: absolute;
-        //     right: 0;
-        //     top: 0;
-        //     background-image: linear-gradient(90deg, rgba(40, 32, 26, 0), rgba(40, 32, 26, 1));
-        //     width: 20px;
-        //     height: 100%;
-        //     z-index: 3;
-        // }
-    }
 
     h2 {
         @include t.title("L");
@@ -79,27 +52,22 @@
         position: relative;
         text-align: left;
         z-index: 2;
-        // white-space: nowrap;
-        // overflow: hidden;
-        // text-overflow: clip;
-        // display: inline-block;
-        // transform: translateX(-100%);
-        // padding-left: 100%;
-        // animation-name: animateText;
-        // animation-iteration-count: infinite;
-        // animation-timing-function: linear;
-        // animation-fill-mode: forwards;
-        // animation-duration: 15000ms;
-        // animation-delay: 1000ms;
+        cursor: grab;
+
+        &:active {
+            cursor: grabbing;
+        }
+
+        &.isCollapsedClass {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
 
     .toggleFloatingState {
         @include b.btn;
         @include b.buttonIconTertiary(32);
-
-        .flipped {
-            transform: rotateX(180deg);
-        }
 
         @media (hover: hover) {
             &.inverted:hover {
@@ -107,9 +75,4 @@
             }
         }
     }
-    
-    // @keyframes animateText {
-    //     from{transform: translateX(0%);}
-    //     to{transform: translateX(-100%);}
-    // }
 }
