fix: audio stopping when switching player types

--- a/src/components/PlayerControls/styles.module.scss
+++ b/src/components/PlayerControls/styles.module.scss
@@ -29,6 +29,7 @@
 
     span {
         @include t.mini("M", "regular", "one-liner");
+        user-select: none;
 
         &:last-child {
             text-align: right;
