--- a/src/components/PlayerFloating/styles.module.scss
+++ b/src/components/PlayerFloating/styles.module.scss
@@ -62,6 +62,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            user-select: none;
         }
     }
 
