chore: added datetime attribute to time tags

--- a/src/components/PlayerControls/styles.module.scss
+++ b/src/components/PlayerControls/styles.module.scss
@@ -27,7 +27,7 @@
         opacity: 50%;
     }
 
-    span {
+    span, time {
         @include t.mini("M", "regular", "one-liner");
         user-select: none;
 
