--- a/src/components/ListItem/styles.module.scss
+++ b/src/components/ListItem/styles.module.scss
@@ -10,6 +10,10 @@
     margin: 32px 0;
     z-index: 2;
 
+    @include br.custom(500) {
+        border-radius: 0;
+    }
+
     &.isCollapsedClass {
         margin: 0;
         z-index: 0;
@@ -18,6 +22,10 @@
 
 .contentContainer {
     background-color: var(--c-surface-secondary);
+
+    @include br.custom(500) {
+        padding: 0 u.toRem(12);
+    }
 
     &.isCollapsedClass {
         background-color: transparent;
@@ -51,8 +59,10 @@
         }
     }
 
-    &:hover, &.blink:hover {
-        background-color: var(--c-surface-secondary);
+    @media (hover: hover) {
+        &:hover, &.blink:hover {
+            background-color: var(--c-surface-secondary);
+        }
     }
 
     header {
@@ -61,6 +71,10 @@
         align-items: center;
         padding-right: u.toRem(24);
         gap: 16px;
+
+        @include br.custom(500) {
+            padding-right: u.toRem(12);
+        }
 
         &.isCollapsedClass {
             padding-right: u.toRem(12);
@@ -84,7 +98,22 @@
                 grid-template-areas:
                     "img title title"
                     "img duration info";
-                gap: 8px 12px;
+                gap: 8px 16px;
+            }
+
+            &:not(.isCollapsedClass) {
+                @include br.custom(766) {
+                    grid-template-columns: auto auto 1fr;
+                    grid-template-areas:
+                        "img title title"
+                        "img duration duration"
+                        "info info info";
+                    gap: 8px 8px;
+                }
+            }
+
+            @include br.custom(500) {
+                padding: u.toRem(12) 0 u.toRem(12) u.toRem(8);
             }
 
             &.isCollapsedClass {
@@ -133,6 +162,10 @@
                     -webkit-line-clamp: 2;
                     -webkit-box-orient: vertical;
                 }
+
+                @include br.custom(500) {
+                    @include t.base("S");
+                }
             }
 
             span {
@@ -150,15 +183,23 @@
 					font-weight: 500;
 				}
 
-                @include br.custom(834) {
-                    max-width: 100%;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-
-                    &.isCollapsedClass::after {
-                        content: '';
+                &.isCollapsedClass {
+                    @include br.custom(834) {
+                        max-width: 100%;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        &::after {
+                            content: '';
+                        }
                     }
+                }
+
+                @include br.custom(500) {
+                    max-width: none;
+                    white-space: normal;
+                    overflow: auto;
+                    text-overflow: unset;
                 }
             }
 
@@ -167,13 +208,18 @@
                 grid-area: duration;
                 justify-self: center;
 
+                @include br.custom(834) {
+                    justify-self: normal;
+                }
+
+                @include br.custom(500) {
+                    justify-self: start;
+                }
+
                 &.isPlayingClass {
                     color: var(--c-amber-accent-secondary);
                 }
 
-                @include br.custom(834) {
-                    justify-self: normal;
-                }
             }
         }
     }
@@ -186,8 +232,22 @@
     gap: u.toRem(24);
     padding: 0 u.toRem(80) u.toRem(20);
 
+    @include br.custom(766) {
+        gap: u.toRem(16);
+        padding: 0 u.toRem(16) u.toRem(12);
+    }
+
+    @include br.custom(500) {
+        gap: u.toRem(16);
+        padding: 0 u.toRem(12) u.toRem(12);
+    }
+
     p {
         @include t.base("M","regular", 150%);
+
+        @include br.custom(500) {
+            font-size: u.toRem(14);
+        }
     }
 }
 
@@ -208,6 +268,11 @@
 
 .playButtonPrimary {
     @include b.buttonIconPrimary(32);
+    
+    @include br.custom(766) {
+        margin-top: 16px;
+        align-self: flex-start;
+    }
 }
 
 .playButtonSecondary {
