--- a/src/components/ListItem/styles.module.scss
+++ b/src/components/ListItem/styles.module.scss
@@ -7,7 +7,7 @@
     position: relative;
     overflow: hidden;
     border-radius: 8px;
-    margin: 32px 0;
+    // margin: 32px 0;
     z-index: 2;
 
     @include br.custom(500) {
@@ -15,7 +15,7 @@
     }
 
     &.isCollapsedClass {
-        margin: 0;
+        // margin: 0;
         z-index: 0;
     }
 }
